# lunacam

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  Makefile  Readme.md
.cargo/: config
build-image/: alarm-chroot.sh  aur-install.sh
client/: install.sh  package.json
client/js/: camera.js  login.js
client/js/admin/: cameras.js  users.js
client/templates/: camera.html
client/templates/admin/: cameras.html
daemon/: Cargo.toml  Makefile  install.sh
daemon/migrations/0000_initial/: up.sql
daemon/src/: api.rs  macros.rs  main.rs  schema.rs  settings.rs  stream.rs  transcoder.rs
daemon/sysroot/etc/nginx/: nginx.conf
daemon/sysroot/usr/lib/systemd/system/: lunacam-daemon.service
img-build/: Dockerfile  alarm-build.sh  alarm-chroot.sh  alarm-init.sh  build.ps1  build_alarm_image.sh  install_aur_packages.sh  loop0.sfdisk  prepare_root_filesystem.sh
js/: admin.js  base.js  home.js
lc_api/: Cargo.toml
lc_api/src/: lib.rs  orientation.rs  result.rs
lcutil/: Cargo.toml
lcutil/src/: lib.rs  result.rs
migrations/0000_initial/: down.sql  up.sql
pi-image/: install.sh
pi-image/root/etc/lunacam/: config.json
pi-image/root/etc/systemd/system/: lunacam-stream.service  lunacam.service
portal/: Cargo.toml  Makefile  Readme.md  install.sh  package-lock.json  package.json
portal/js/: admin.js  base.js
portal/js/admin/: cameras.js
portal/migrations/2019-08-11-205757_initial/: down.sql  up.sql
portal/src/: api.rs  camera.rs  macros.rs  main.rs  schema.rs  templates.rs  ui.rs
portal/style/: style.scss
portal/sysroot/etc/nginx/: nginx.conf
portal/sysroot/usr/lib/systemd/system/: lunacam-portal.service
portal/templates/: admin.html  base.html  index.html
portal/templates/admin/: cameras.html
scripts/: build-image.ps1  build-lcsvc.ps1  prepare-style-dir.ps1
src/: api.rs  auth.rs  cameras.rs  config.rs  error.rs  lcsvc.rs  lib.rs  locks.rs  logging.rs  macros.rs  main.rs  prochost.rs  proxy.rs  sec.rs  settings.rs  stream.rs  templates.rs  tmpl.rs  ui.rs  users.rs
src/agent/: main.rs
src/db/: mod.rs  schema.rs
src/portal/: api.rs  camera.rs  main.rs  ui.rs
staging/: gadget.network  index.html  lunacam-web.service  prepare_alarm_image.sh  raspberrypi.conf  sysusers.conf  tmpfiles.conf  udev.rules
style/: style.scss
system/: install.sh
system/root/boot/: config.txt
system/root/etc/: hostname
system/root/etc/lunacam/: config.json  nginx.conf
system/root/etc/modprobe.d/: g_ether.conf
system/root/etc/modules-load.d/: raspberrypi.conf
system/root/etc/systemd/system/: lunacam-stream.service  lunacam-web.service  lunacam.service
system/root/etc/tmpfiles.d/: lunacam.conf
templates/: admin.html  base.html  camera.html  hls.conf  home.html  index.html  login.html  proxy.conf  proxy.config
templates/admin/: cameras.html  users.html
tools/crossbuild/: Dockerfile  build.sh
tools/devops/: Install-Sass.ps1  agent-image.yml  build.yml  camera-image.yml  full-image.yml  install-sass.sh  portal-image.yml
tools/devops/templates/: make-image.yml
tools/imagebuild/: Dockerfile  alarm-chroot.sh  build.sh  install-helpers.sh  setup.sh
tools/imagebuild/scripts/: alarm-chroot.sh  alarm-init.sh  build.sh
tools/imagebuild/sysroot/boot/: config.txt
tools/imagebuild/sysroot/etc/: hostname
tools/imagebuild/sysroot/etc/modules-load.d/: lunacam.conf
tools/make/: deploy.mk  pal.mk  rust.mk
tools/pi-gen/: config-agent.sh  config-portal.sh  config.sh  prerun.sh  utils.sh
tools/pi-gen/agent/: EXPORT_IMAGE
tools/pi-gen/agent/00-video/: 01-run.sh
tools/pi-gen/agent/01-agent/: 00-run.sh
tools/pi-gen/agent/01-web/: 00-run.sh
tools/pi-gen/agent/01-web/files/: hls-stream.conf  nginx.conf
tools/pi-gen/agent/02-agent/: 00-run.sh
tools/pi-gen/agent/02-agent/files/: lcagent.service
tools/pi-gen/common/00-boot-files/files/: cmdline.txt  config.txt
tools/pi-gen/common/00-gadget/: 01-run.sh
tools/pi-gen/common/00-gadget/files/: dhcpcd.conf  isc-dhcp-server.defaults
tools/pi-gen/common/00-network/: 01-run.sh
tools/pi-gen/common/00-network/files/: dhcpd.conf  usb0.if
tools/pi-gen/common/01-users/: 00-run.sh
tools/pi-gen/common/02-web/: 01-run.sh
tools/pi-gen/common/03-lcsvc/: 00-run.sh
tools/pi-gen/common/03-lunacam/: 00-run.sh
tools/pi-gen/finalize/: EXPORT_IMAGE
tools/pi-gen/portal/: EXPORT_IMAGE
tools/pi-gen/portal/00-web/: 00-run.sh
tools/pi-gen/portal/01-portal/: 00-run.sh
tools/pi-gen/stream/00-video/: 01-run.sh
tools/scripts/: build-css.ps1  build-image.ps1  build-lcsvc.ps1  cross-compile.ps1  runner.ps1
(+14 files in other folders)
