[package]
name = "lunacam"
version = "0.2.0"
authors = ["Bobby Reynolds <bobby@reynoldsbd.net>"]
edition = "2018"

[[bin]]
name = "lcagent"
path = "src/agent/main.rs"

[dependencies]
actix-web = "1.0"
derive_more = "0.15"
diesel = {version = "1.4", features = ["r2d2", "sqlite"] }
diesel_migrations = "1.4"
env_logger = "0.6"
hotwatch = "0.4"
libsqlite3-sys = { version = "0.12", features = ["bundled"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0.0-beta.13"
tokio = "0.1"

[workspace]
members = [
    "portal",
]
