[package]
name = "lunacam"
version = "0.2.0"
authors = ["Bobby Reynolds <bobby@reynoldsbd.net>"]
edition = "2018"
default-run = "lcsvc"

[[bin]]
name = "lcsvc"
path = "src/lcsvc.rs"

[features]
default = ["portal", "stream"]
portal = []
stream = []
stream-api = ["stream"]

[dependencies]
actix-files = "0.1"
actix-web = "1.0"
argonautica = "0.2"
base64 = "0.10"
bytes = "0.4"
derive_more = "0.15"
diesel = { version = "1.4", features = ["r2d2", "sqlite"] }
diesel_migrations = "1.4"
env_logger = "0.6"
futures = "0.1"
lazy_static = "1.4"
libsqlite3-sys = { version = "0.12", features = ["bundled"] }
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.7"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0.0-beta.13"
tokio = "0.1"
