[package]
name = "lunacam-daemon"
version = "0.1.0"
authors = ["Bobby Reynolds <bobby@reynoldsbd.net>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"
env_logger = "0.6"
lazy_static = "1.3"
libsqlite3-sys = { version = "0.12", features = ["bundled"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
