[package]
name = "lcutil"
version = "0.1.0"
authors = ["Bobby Reynolds <bobby@reynoldsbd.net>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
derive_more = "0.15"
diesel = {version = "1.4", features = ["r2d2", "sqlite"] }
diesel_migrations = "1.4"
hotwatch = "0.4"
log = "0.4"
serde_json = "1.0"
tera = "1.0.0-beta.13"
tokio = "0.1"
