[package]
name = "lunacam-portal"
version = "0.1.0"
authors = ["Bobby Reynolds <bobby@reynoldsbd.net>"]
edition = "2018"

[dependencies]
actix-files = "0.1"
actix-web = "1.0"
derive_more = "0.15"
diesel = {version = "1.4", features = ["sqlite"] }
env_logger = "0.6"
hotwatch = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0.0-beta.13"
