[package]
name = "lunacam-portal"
version = "0.1.0"
authors = ["Bobby Reynolds <bobby@reynoldsbd.net>"]
edition = "2018"

[dependencies]
actix-files = "0.1"
actix-web = "1.0"
diesel = {version = "1.4", features = ["r2d2", "sqlite"] }
diesel_migrations = "1.4"
env_logger = "0.6"
hotwatch = "0.4"
lazy_static = "1.3"
lc_api = { path = "../lc_api" }
lcutil = { path = "../lcutil" }
libsqlite3-sys = { version = "0.12", features = ["bundled"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0.0-beta.13"
